--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="enter_code">Enter Code</string>
     <string name="submit">Submit</string>
     <string name="invalid_otp">Invalid OTP</string>
+    <string name="nutritional_facts">Nutritional Facts</string>
+    <string name="quantity">Quantity</string>
+    <string name="purchase">Purchase</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="proceed_to_pay">Proceed to Pay</string>
 </resources>
