Implement cart delete, fingerprint, payment webview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="purchase">Purchase</string>
     <string name="add_to_cart">Add to Cart</string>
     <string name="proceed_to_pay">Proceed to Pay</string>
+    <string name="delete_confirm">Remove from Cart?</string>
 </resources>
